solve the bug of word hidden of PostCard components.

--- a/yukina/src/components/PostCard.astro
+++ b/yukina/src/components/PostCard.astro
@@ -22,7 +22,7 @@ export interface Props {
   tags?: string[];
   description?: string;
   image?: string;
-  readingMetadata?: { time: number; wordCount: number };
+  readingMetadata?: { wordCount: number };
 }
 
 const props = Astro.props;
