--- a/lingLong/src/components/misc/CopyRight.astro
+++ b/lingLong/src/components/misc/CopyRight.astro
@@ -39,7 +39,7 @@ const { title, published, license, author, sourceLink } = Astro.props;
           >{i18n(I18nKeys.copy_right_author)}</span
         >
         <p
-          class="!my-0 line-clamp-1 text-sm text-[var(--text-color)] lg:text-base"
+          class="username !my-0 line-clamp-1 text-sm text-[var(--text-color)] lg:text-base"
         >
           {author ?? LingLongConfig.username}
         </p>
@@ -49,7 +49,7 @@ const { title, published, license, author, sourceLink } = Astro.props;
           >{i18n(I18nKeys.copy_right_publish_date)}</span
         >
         <p
-          class="!my-0 line-clamp-1 text-sm text-[var(--text-color)] lg:text-base"
+          class="published!my-0 line-clamp-1 text-sm text-[var(--text-color)] lg:text-base"
         >
           {formatDate(published, LingLongConfig.locale)}
         </p>
@@ -107,4 +107,13 @@ const { title, published, license, author, sourceLink } = Astro.props;
   .fonts {
     font-family: var(--primary-font);
   }
+
+  .username{
+    @apply text-center text-transparent
+           bg-gradient-to-r  from-blue-500 via-purple-500 to-pink-500
+           bg-clip-text
+           ;
+    font-family: var(--title-font);
+  }
+
 </style>
