--- a/lingLong/src/components/ScriptSetup.astro
+++ b/lingLong/src/components/ScriptSetup.astro
@@ -94,6 +94,7 @@
 
     // 创建TOC HTML
     tocContainer.innerHTML = `
+    <div class="toc">
       <div class="toc-header">
         <h3>目录</h3>
       </div>
@@ -108,6 +109,7 @@
           `).join('')}
         </ul>
       </div>
+    </div>
     `;
 
     // 添加到页面
@@ -188,3 +190,9 @@
     });
   }
 </script>
+
+<style>
+.toc{
+  
+}
+</style>
